--- a/index.html
+++ b/index.html
@@ -9,56 +9,10 @@
 <body class="text-gray-700 font-sans text-lg">
     <nav class="bg-blue-900 h-16 mb-2"></nav>
     <div id="app">
-        <div class="flex flex-wrap p-4">
-            <div class="w-3/6">
-                <img class="border border-solid border-gray-300 w-3/5 m-12" :src="image" :alt="altText">
-            </div>
-
-            <div class="mt-8 w-3/6">
-                <!-- producto info -->
-                <h1 class="text-2xl">{{ title }}</h1>
-                <a :href="link" target="_blank">Mas productos como este...</a>
-                <p v-if="inStock">In Stock</p>
-                <p v-else :class="{ outOfStock: !inStock }">Out of Stock</p>
-                <span>{{ sale }}</span>
-                <ul>
-                    <p>Details:</p>
-                    <li class="list-disc ml-6" v-for="detail in details">{{ detail }}</li>
-                </ul>
-                <ul>
-                    <p>Sizes:</p>
-                    <li class="list-disc ml-6" v-for="size in sizes">{{ size }}</li>
-                </ul>
-
-                <div class="flex flex-row mb-4">
-                    <div 
-                        v-for="(variant, index) in variants" 
-                        @mouseover="updateProduct(index)"
-                        class="w-8 h-8 mt-3 mr-3"
-                        :key="variant.variantId"
-                        :style="{ backgroundColor: variant.variantColor }"
-                        >
-                    </div>
-                </div>
-
-                <div class="flex flex-row">
-                    <button 
-                        @click="addToCart" 
-                        :disabled="!inStock" 
-                        class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded"
-                        >
-                        Add to Cart
-                    </button>
-                    <button @click="removeFromCart" class=" ml-2 bg-red-400 hover:bg-red-600 text-white font-bold py-2 px-4 rounded">Remove from Cart</button>
-    
-                    <div class="border border-solid border-gray-300 ml-6 py-1 px-6">
-                        <p>Cart({{ cart }})</p>
-                    </div>
-                </div>
-
-
-            </div>
+        <div class="border border-solid border-gray-300 ml-6 py-1 px-6">
+            <p>Cart({{ cart.length }})</p>
         </div>
+        <product :premium="premium" @add-to-cart="updateCart" @remove-from-cart="removeItems"></product>
     </div>
     
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
